# moti-do

./: .coverage  .depcheckrc  .env.example  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  .roorules  .vercelignore  1  356e462d-44fc-44f4-bc7d-7fd232d51e72.jsonl  AGENTS.md  CLAUDE.md  COMPREHENSIVE_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  SCORING_SYSTEM.md  VISION_AUDIT.md  basic_idea.md  comments.txt  conversation-summary-2025-01-05.md  debug_db_row.py  debug_saved_task.py  debug_select_values.py  debug_select_widget.py  docker-compose.test.yml  docker-compose.yml  marvin_cli_viewer.py  motido-backup-2026-02-07T18-26-34.json  motido.py  next.config.js  package-lock.json  package.json  plan_add_creation_date.md  plan_add_difficulty.md  plan_difficulty_emoji_style.md  pylint_one_by_one.sh  pyproject.toml  requirements.txt  tailwind.config.js  (+9 more)
.claude/: settings.json
.copilot-tracking/changes/: 20251116-motido-vision-alignment-changes.md  20251122-vision-implementation-changes.md  20260111-add-duplicate-task-changes.md  20260111-task-table-revamp-changes.md  20260119-feature-1-task-table-revamp-changes.md
.copilot-tracking/details/: 20251116-motido-vision-alignment-details.md  20251122-vision-implementation-details.md  add-duplicate-task-details.md  feature-1-task-table-revamp.md
.copilot-tracking/plans/: 20251116-motido-vision-alignment-plan.instructions.md  20251122-vision-implementation-plan.instructions.md  current_plan.md  feature1-task-table-revamp.md
.copilot-tracking/prompts/: implement-motido-vision-alignment.prompt.md  implement-vision-implementation.prompt.md
.copilot-tracking/research/: 20251116-motido-vision-alignment-research.md  20251122-vision-audit-research.md
.cursor/rules/: baseline-rules.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  claude.yml  vercel-preview.yml
.serena/: project.yml
api/: index.py  requirements.txt
cli/: initialize.py  main.py
cli/commands/: task.py
docs/: ARCHITECTURE.md  COVERAGE_PLAN.md  DEPLOYMENT.md  FEATURE_IMPLEMENTATION_PLAN.md  INTEGRATION_TESTING_PLAN.md  MANTINE_MIGRATION_PLAN.md  SCORING.md  USER_GUIDE.md  motido-backup-schema.json  todo.md
frontend/: README.md  generate-tests.md  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/dev-dist/: sw.js  workbox-a87ad30a.js
frontend/e2e/: auth.setup.ts  global-setup.ts  global-teardown.ts
frontend/e2e/fixtures/: auth.fixture.ts  base.fixture.ts  task-data.fixture.ts
frontend/e2e/pages/: calendar.page.ts  graph.page.ts  habits.page.ts  index.ts  kanban.page.ts  login.page.ts  tasks.page.ts
frontend/e2e/tests/: auth.spec.ts  calendar.spec.ts  cross-cutting.spec.ts  graph.spec.ts  habits.spec.ts  kanban.spec.ts  refresh.spec.ts  settings.spec.ts  task-crud.spec.ts  task-icon.spec.ts
frontend/e2e/utils/: performance-metrics.ts
frontend/public/: manifest.json
frontend/scripts/: generate-icons.js
frontend/src/: App.test.tsx  App.tsx  CrisisModeHandler.test.tsx  CrisisModeHandler.tsx  RootProviders.test.tsx  RootProviders.tsx  index.css  main.tsx  theme.ts  vite-env.d.ts
frontend/src/hooks/: index.ts  useAppInitialization.test.ts  useAppInitialization.test.tsx  useAppInitialization.ts  useRefresh.test.tsx  useRefresh.ts
frontend/src/pages/: CalendarPage.test.tsx  CalendarPage.tsx  Dashboard.test.tsx  Dashboard.tsx  GraphPage.test.tsx  GraphPage.tsx  HabitsPage.test.tsx  HabitsPage.tsx  KanbanPage.test.tsx  KanbanPage.tsx  LoginPage.test.tsx  LoginPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  TasksPage.test.tsx  TasksPage.tsx  TasksPage.undo.test.tsx  index.ts
frontend/src/services/: api.test.ts  api.ts  appUpdate.test.ts  appUpdate.ts  notifications.test.ts  notifications.ts
frontend/src/store/: index.ts  layoutStore.test.ts  (+6 more)
scripts/: check-all.sh  check_version.py  dev.sh  generate_assets.py  run-e2e.sh  run-tests.sh  verify.py  verify.sh
src/: index.html
src/app/: globals.css  layout.tsx  page.tsx
src/cli/: main.py
src/components/: Calendar.js  ClientLayout.tsx  DataStorage.js  DependencyGraph.js  Habit.js  HabitEditDialog.tsx  HabitItem.tsx  Layout.tsx  Notification.js  ResetConfirmationDialog.tsx  ResetProfileDialog.tsx  Score.js  ScoreBankDialog.tsx  ScoreBreakdownDialog.tsx  TaskEditDialog.tsx  Todo.tsx  UndoSnackbar.tsx  index.ts
src/core/: utils.py
src/data/: __init__.py  abstraction.py  config.py  database_manager.py  json_manager.py
src/lib/: storage.ts  theme.ts
src/models/: Habit.ts  Task.ts  User.ts
src/store/: AppStore.ts
stitch_refined_ledger_prd_v2/dashboard_desktop_logo_integrated/: code.html
stitch_refined_ledger_prd_v2/dashboard_mobile_logo_integrated/: code.html
stitch_refined_ledger_prd_v2/kinetic_console/: DESIGN.md
stitch_refined_ledger_prd_v2/tasks_desktop_logo_integrated/: code.html
stitch_refined_ledger_prd_v2/tasks_mobile_logo_integrated/: code.html
tests/: conftest.py  npm_tests.py  test_backend_factory.py  test_cli_advance.py  test_cli_badges.py  test_cli_batch.py  test_cli_dates.py  test_cli_dependency_filter.py  test_cli_depends.py  test_cli_describe.py  test_cli_graph_filter.py  test_cli_habits.py  test_cli_history.py  test_cli_list_enhanced.py  test_cli_main.py  test_cli_main_edge_cases.py  test_cli_main_extras.py  test_cli_new_commands.py  test_cli_project.py  test_cli_scoring.py  test_cli_subtask.py  test_cli_subtask_modes.py  test_cli_tags.py  test_cli_tags_projects.py  test_cli_vacation.py  test_cli_view_coverage.py  test_cli_view_enhanced.py  test_cli_view_heatmap.py  test_cli_xp.py  test_config.py  test_database_manager.py  test_database_manager_creation_date.py  test_database_manager_extras.py  test_fixtures.py  test_habit_start_delta.py  test_icon_autogen.py  test_json_manager.py  test_json_manager_creation_date.py  test_json_manager_extras.py  test_json_manager_update.py  (+12 more)
tests/api/: conftest.py  test_auth.py  test_defer.py  test_deps.py  test_import_export.py  test_system.py  test_tasks.py  test_user.py  test_views.py
(+166 files in other folders)
