[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motido"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" }, # TODO: Update author details
]
description = "A simple command-line task management application."
readme = "README.md" # Assumes you might add a README later
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # TODO: Choose appropriate license
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
# Add dependencies here if needed later, e.g.,
# dependencies = [
#     "requests>=2.20",
# ]

[project.urls]
"Homepage" = "https://github.com/yourusername/moti-do" # TODO: Update URL

[project.scripts]
motido = "motido.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]  # look for packages in src/ 

[project.optional-dependencies]
test = [
    "pytest>=7.0", # Or specify the version you prefer
    "pytest-mock>=3.0", # Add pytest-mock
] 