[tool.poetry]
name = "motido"
version = "0.1.0"
description = "A simple command-line task management application."
authors = ["Your Name <you@example.com>"] # TODO: Update author details
readme = "README.md"
license = "MIT" # TODO: Choose appropriate license or confirm MIT
homepage = "https://github.com/yourusername/moti-do" # TODO: Update URL
repository = "https://github.com/yourusername/moti-do" # TODO: Update URL
packages = [{include = "motido", from = "src"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.9"
# Add runtime dependencies here if needed, e.g.,
# requests = "^2.20"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
pytest-mock = ">=3.0"
pytest-cov = ">=6.1.1" # For coverage reporting
black = ">=25.1.0"    # Code formatter
isort = ">=6.0.1"    # Import sorter
pylint = ">=3.2.5"    # Linter
mypy = ">=1.10.1"     # Static type checker
safety = ">=3.2.3"    # Security checker
poethepoet = "^0.33.1"

[tool.poetry.scripts]
motido = "motido.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38'] # Specify Python versions you support

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Start with this, gradually remove as types are added
disallow_untyped_defs = true  # Enforce type hints for functions
check_untyped_defs = true     # Type check functions without annotations (best effort)
show_error_codes = true
exclude = ["venv", ".*/build"] # Exclude virtual environment and build directories

[tool.pylint.main]
# Add plugins or specific configurations here if needed
# Example: load-plugins = pylint_django
# Disable specific messages if necessary, e.g.,
# disable=missing-docstring,invalid-name
fail-under = 8.0 # Set a minimum score threshold

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers" # Recommended options: report all info, quiet, strict markers
testpaths = [
    "tests", # Directory containing tests
]
pythonpath = [
  "src"
]

[tool.coverage.run]
branch = true
source = ["motido"] # Specify the source directory for coverage measurement
omit = [
    "src/motido/__main__.py", # Example: omit main entry point if trivial
    "tests/*",                # Exclude test files themselves from coverage
    "**/__init__.py",         # Typically omit init files
]

[tool.coverage.report]
fail_under = 80 # Set a minimum coverage threshold
show_missing = true
skip_covered = true # Don't report on 100% covered files

[tool.coverage.xml]
output = "coverage.xml" # Output for CI/CD systems


# -- Poe the Poet Task Runner Configuration --

[tool.poe.tasks]
# Define tasks directly with their commands
format = [
    { cmd = "black ." },
    { cmd = "isort ." }
]
lint = "pylint src tests --fail-under=10"
typecheck = "mypy src tests"
test = "pytest"
coverage = "pytest --cov=motido --cov-report=term-missing --cov-fail-under=100"
security = "safety scan"

# Main check task still references the directly defined tasks
check = [
    "format",
    "test",
    "coverage",
    "lint",
    "typecheck",
] 

check-all = [
    "check",
    "security"
]